fix card text overflow

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -27,6 +27,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  max-width: 220px;
 }
 
 .card__like-button {
